<resources>
    <string name="app_name">MoMmY</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">mobile number(10 digits)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_address">Address</string>
    <string name="hint_locality">Age</string>
    <string name="btn_sign_up">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Mobile no (10 digit)</string>
    <string name="hint_name">Name</string>


        <string name="action_add_favourite">Add to Favourites</string>
        <string name="action_play_next">Play Next</string>
        <string name="backdrop_title">LOVE MUSIC</string>
        <string name="backdrop_subtitle">This season top 20 albums</string>

</resources>
